added pressure_wave as initial condition (testcase for symmetric BC)

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -12,7 +12,7 @@ dim=2;
 ; box size of computational domain. [Lx Ly Lz]
 domain_size=1 1;
 ; synchronization (off: 0/false/yes | on: 1/true/no) on [x y z] domain boundaries
-periodic_BC=0 0;
+periodic_BC=1 0;
 
 
 [Blocks]
@@ -47,9 +47,12 @@ block_dist=sfc_hilbert;
 ; Therefore, you can call loadbalancing only every couple of time steps. This parameter
 ; should affect only the computational cost and not the result.
 loadbalancing_frequ=1;
-; coarsening indicator to be used in mesh adaptation
+; coarsening indicator to be used in mesh adaptation [threshold-state-vector,random,threshold-vorticity]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; threshold-vorticity: evaluates wavelet criterion on vorticity
+;random
+;randomly coarse some blocks. used for testing. note we tag for coarsening
+;only once in the first iteration
 coarsening_indicator=threshold-state-vector;
 ; use normalization for eps or not? normalization is done with INFTY norm currently. default
 ; is no normalization (0). ATTENTION works only for ACM currently (TODO!)
@@ -249,8 +252,6 @@ initial_density=1.645;      rho_0
 order_discretization=FD_4th_central_optimized;
 ; order of refinement predictor [ multiresolution_4th | multiresolution_2nd ]
 order_predictor=multiresolution_4th;
-; boundary condition [ periodic ]
-boundary_cond=periodic;
 ; filtering of equations. NOTE: the filters are PHYSICS MODULE SPECIFIC! Hence it depends on the module
 ; which values you can set here.
 ; cNS: [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | bogey_shock | wavelet_filter]
