restructuring: hvy_work now only for RHS slots, new hvy_tmp as work array (which was previously hvy_work)

--- a/TESTING/acm/acm_cyl_adaptive/acm_test.ini
+++ b/TESTING/acm/acm_cyl_adaptive/acm_test.ini
@@ -47,7 +47,7 @@ non_uniform_mesh_correction=1;
 ; how many fields are you going to save?
 N_fields_saved=6;
 ; how are the fields labeled?
-field_names=Ux Uy p vor div mask;
+field_names=vor Ux Uy p div mask;
 
 [ACM-new]
 ; speed of sound
