--- a/TESTING/acm/acm_cyl_adaptive_newsponge/cylinder.ini
+++ b/TESTING/acm/acm_cyl_adaptive_newsponge/cylinder.ini
@@ -64,7 +64,7 @@ tsave_stats=0.20;
 ; how many fields are you going to save?
 N_fields_saved=7;
 ; how are the fields labeled?
-field_names=ux uy p vor div mask sponge;
+field_names=vor ux uy p div mask sponge;
 
 [ACM-new]
 ; speed of sound
