krylov: fixed dimension of subspaces is working

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -21,9 +21,11 @@ periodic_BC=1 1;
 number_block_nodes=17;
 ; ghost nodes for each block. It is possible that in current versions, one can only
 ; set even values
-number_ghosts_nodes=4;
+number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
+; ACM: 3 (2D), 4 (3D)
+; Convection: 1 (2D /3D)
 number_equations=4;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
@@ -81,8 +83,12 @@ time_max=1.0;
 walltime_max=999.9;
 ; number of time steps performed. if not set, default value is very large
 nt=;
-; CFL criterium
+; CFL criterium (velocity)
 CFL=1.0;
+; CFL critierum for penalization (dt<CFL_eta*C_eta), if VPM is used. For RungeKuttaGeneric schemes, the constant
+; has to be < 1.0 (otherwise the code is unstable). For krylov schemes, it can be greater
+; 1, but be careful about the error.
+CFL_eta=0.99;
 ; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
 write_method=fixed_time;
 ; write frequency for output, choose very large number for disabling output on disk
@@ -95,6 +101,16 @@ dt_fixed=0.0;
 ; largest time step, if you want to set one. dt is always smaller than that, if the
 ; value is greater 0. default is 0.0, so not used.
 dt_max=0.0;
+; time-step method. can be either "RungeKuttaGeneric" or "Krylov". In the former case,
+; any explicit Runge-Kutta scheme can be set by using the Butcher-Tableau. In the latter,
+; the number of Krylov subspaces M_krylov can be set.
+time_step_method=RungeKuttaGeneric;
+; if time_step_method is krylov, then you can specify the dimension of the krylov subspace
+; below. If dynamic subspace dimensions are used, we interpret this number as the maximum
+; number of spaces admissible (the method requires a lot of memory in general)
+M_krylov=12;
+; fixed or dynamic krylov subspace dimension:
+krylov_subspace_dimension=fixed;
 ; butcher_tableau
 ; use your butcher_tableau for the Runge Kutta time step function
 ; e.g. RK4:
