--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -477,6 +477,11 @@ shock_front_normal=2;
 [Debug]
 ; 1 ... debuging for time measurements and testcases is active,
 debug=1;
+; If set to 1, the code will issue a single XXXXXtimes.dat file per proc, where one
+; can examine individual mpiranks manually. this file is written in every iteration.
+; the IO cost on some machines can be substantial if many cores are used: better disable
+; this functionality then. default is 0.
+write_individual_timings=0;
 ; unit tests
 test_time_stepper=0;
 test_spatial=0;
