krylov timing for matrix exponential

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -104,12 +104,14 @@ dt_max=0.0;
 ; time-step method. can be either "RungeKuttaGeneric" or "Krylov". In the former case,
 ; any explicit Runge-Kutta scheme can be set by using the Butcher-Tableau. In the latter,
 ; the number of Krylov subspaces M_krylov can be set.
+; [ RungeKuttaGeneric, Krylov ]
 time_step_method=RungeKuttaGeneric;
 ; if time_step_method is krylov, then you can specify the dimension of the krylov subspace
 ; below. If dynamic subspace dimensions are used, we interpret this number as the maximum
 ; number of spaces admissible (the method requires a lot of memory in general)
 M_krylov=12;
 ; fixed or dynamic krylov subspace dimension:
+; [ fixed, dynamic ]
 krylov_subspace_dimension=fixed;
 ; butcher_tableau
 ; use your butcher_tableau for the Runge Kutta time step function
