--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -102,7 +102,7 @@ dt_fixed=0.0;
 ; value is greater 0. default is 0.0, so not used.
 dt_max=0.0;
 ; time-step method. can be either "RungeKuttaGeneric" or "Krylov". In the former case,
-; any explicit Runge-Kutta scheme can be set by using the Butcher-Tableau. In the latter,
+; any explicit Runge-Kutta scheme can be set by using the Butcher-Tableau. (RK4 is default) In the latter,
 ; the number of Krylov subspaces M_krylov can be set.
 ; [ RungeKuttaGeneric, Krylov ]
 time_step_method=RungeKuttaGeneric;
@@ -113,6 +113,9 @@ M_krylov=12;
 ; fixed or dynamic krylov subspace dimension:
 ; [ fixed, dynamic ]
 krylov_subspace_dimension=fixed;
+; if dynamic subspace dimensionality is used, provide the residuum threshold here. Note this is
+; in general not an exact measure for the error, but rather a good indicator.
+krylov_err_threshold=1.0e-3;
 ; butcher_tableau
 ; use your butcher_tableau for the Runge Kutta time step function
 ; e.g. RK4:
