update insect-module // update ini-files-parser // experimental: more than one time step on the same grid

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -71,6 +71,12 @@ threshold_state_vector_component=1 1 0;
 ; expected precision is thus max_treelevel-1, but the computational cost (derivatives and timestep)
 ; is on max_treelevel.
 force_maxlevel_dealiasing=0;
+; if desired, we perform more than one time step
+; before adapting the grid again. this can further reduce the overhead of adaptivity
+; Note: the non-linear terms can create finer scales than resolved on the grid. they
+; are usually filtered by the coarsening/refinement round trip. So if you do more than one time step
+; on the grid, consider using a filter. default is "1", which is the classical scheme
+N_dt_per_grid=1;
 
 
 [Time]
