ACM: add mach number

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -159,9 +159,14 @@ tsave_stats=0.20;
 
 
 [ACM-new]
-; speed of sound, used also for the CFL condition. NOTE: if c_0 ~ u, then the CFL
-; condition may be wrongly estimated, since the eigenvalues are actually different
+; speed of sound, used also for the CFL condition. The characteristic velocity is
+; u_eigen = umax+ sqrt(umax**2 + c0**2)
 c_0=50.0;
+; the speed of sound is usually a constant, but for numerics it might be a good idea to interpret
+; it as a mach number, relative to the largest velocity in the field. In this case, c0 = max(u)*MachNumber
+; and c0(t). The scaling is used if a MachNumber>0.0 is given; otherwise, c0 is a constant. Of course, if
+; MachNumber is given, the above value of c_0 is useless.
+MachNumber=;
 ; viscosity. We also respect the time step constraint imposed by explicit diffusion
 nu=1e-2;
 ; damping term for pressure, see [Ohwada, Asinari, JCP2010]
