ACM: experimental work on MachNumber fixing (fruitless efforts...probably to be removed)

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -164,9 +164,19 @@ tsave_stats=0.20;
 c_0=50.0;
 ; the speed of sound is usually a constant, but for numerics it might be a good idea to interpret
 ; it as a mach number, relative to the largest velocity in the field. In this case, c0 = max(u)*MachNumber
-; and c0(t). The scaling is used if a MachNumber>0.0 is given; otherwise, c0 is a constant. Of course, if
-; MachNumber is given, the above value of c_0 is useless.
+; and c0(t). The scaling is used if a MachNumber>0.0 is given; otherwise, c0 is a constant. If
+; MachNumber is given, the above value of c_0 is used only before t0_MachNumber
 MachNumber=;
+; if umax is a violent function of time, which can happen with impulsively started flows,
+; the MachNumber strategy can fail (numerical instability). to avoid this, use MachNumber
+; only after the initial pressure wave has been transported through the domain.
+; the default is zero (DANGEROUS!), a good value would be Lx/c_0 (where c_0 is used only
+; in the beginning)
+; t<t0 : fixed c0
+; t0<=t<=t1: smooth transition
+; t1<=t: MachNumber
+t0_MachNumber=;
+t1_MachNumber=;
 ; viscosity. We also respect the time step constraint imposed by explicit diffusion
 nu=1e-2;
 ; damping term for pressure, see [Ohwada, Asinari, JCP2010]
