documentation // remove ACM mach number (not a good idea)

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -85,27 +85,37 @@ time_max=1.0;
 ; maximum walltime allowed for simulations (in hours). The run will be stopped if this duration
 ; is exceeded. This is useful on real clusters, where the walltime of a job is limited, and the
 ; system kills the job regardless of whether we're done or not. If WABBIT itself ends execution,
-; a backup is written and you can resume the simulation where it ended
+; a backup is written and you can resume the simulation right where it stopped. Note you can also
+; stop a run using the file "runtime_control" (set runtime_control=save_stop;)
 walltime_max=999.9;
 ; number of time steps performed. if not set, default value is very large
 nt=;
-; CFL criterium (velocity)
+; CFL criterium (velocity). Note the time step dt is dictated by the physics modules: some eqns (like
+; the heat eqn, which is not implemented) may not even have a CFL restriction.
 CFL=1.0;
-; CFL critierum for penalization (dt<CFL_eta*C_eta), if VPM is used. For RungeKuttaGeneric schemes, the constant
+; CFL critierum for penalization (dt<=CFL_eta*C_eta), if VPM is used. For RungeKuttaGeneric schemes, the constant
 ; has to be < 1.0 (otherwise the code is unstable). For krylov schemes, it can be greater
-; 1, but be careful about the error.
+; 1, but be careful about the error. This parameter is used by ACM physics module only.
 CFL_eta=0.99;
-; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
+; wabbit can save the heavy data (flow fiels) to HDF5. What is saved depends on the physics modules
+; and the section [Saving]. Here you control WHEN you want to save the output: either after a fixed
+; number of time steps [fixed_freq], or after a physical time interval [fixed_time]
 write_method=fixed_time;
+; if write_method=fixed_freq:
 ; write frequency for output, choose very large number for disabling output on disk
 write_freq=2;
+; if write_method=fixed_time:
 ; write time for output
 write_time=100.05;
-; fixed time step. if greater 0, then the time step is fixed no matter what.
-; default is 0.0, so not used.
+; fixed time step. if the value is greater 0.0, then the time step is fixed no matter what.
+; the setting from the physics modules, which usually decide about dt, are ignored and over-
+; written. The default is 0.0, so not used. NOTE: WABBIT still will adjust dt to precisely match
+; the time for saving and statistics and the final time, if any of those is not a multiple of dt_fixed.
+; In that case, some time steps may be smaller in order to reach those times.
 dt_fixed=0.0;
 ; largest time step, if you want to set one. dt is always smaller than that, if the
-; value is greater 0. default is 0.0, so not used.
+; value is greater 0. default is 0.0, so not used. WABBIT overwrites the physics module dt
+; by that value, if the timestep is larger than dt_max and dt_max > 0.
 dt_max=0.0;
 ; time-step method. can be either "RungeKuttaGeneric" or "Krylov". In the former case,
 ; any explicit Runge-Kutta scheme can be set by using the Butcher-Tableau. (RK4 is default) In the latter,
@@ -137,14 +147,19 @@ krylov_err_threshold=1.0e-3;
 ; [ACM-new, ConvDiff-new, navier_stokes]
 physics_type=navier_stokes;
 ; decide if you want to start from a given configuration (i.e. Statevector)
-; 1:true, 0:false and we start from iniconditions
+; 1:true, 0:false and we start from the initial conditions dictated by the physics
+; modue.
 read_from_files=0;
 ; if read_from_files is true, WABBIT will try to start from the given files
 input_files=rho_000000000141.h5 Ux_000000000141.h5 Uy_000000000141.h5 p_000000000141.h5;
 
 
 [Saving]
-; TODO: maybe this section is clumsy and should be revised.
+; WABBIT is in charge of saving, but what is saved is controled by the physics modules.
+; here, you need to tell WABBIT how many fields are saved and how they will be labeled.
+; The physics modules are then in charge of providing the respective data to WABBIT. I.e.
+; if the field is called "mask", WABBIT will ask the physics module to return the array
+; "mask" and then save that to disk.
 ; how many fields are you going to save?
 N_fields_saved=6;
 ; how are the fields labeled?
@@ -160,23 +175,8 @@ tsave_stats=0.20;
 
 [ACM-new]
 ; speed of sound, used also for the CFL condition. The characteristic velocity is
-; u_eigen = umax+ sqrt(umax**2 + c0**2)
+; u_eigen = umax + sqrt(umax**2 + c0**2)
 c_0=50.0;
-; the speed of sound is usually a constant, but for numerics it might be a good idea to interpret
-; it as a mach number, relative to the largest velocity in the field. In this case, c0 = max(u)*MachNumber
-; and c0(t). The scaling is used if a MachNumber>0.0 is given; otherwise, c0 is a constant. If
-; MachNumber is given, the above value of c_0 is used only before t0_MachNumber
-MachNumber=;
-; if umax is a violent function of time, which can happen with impulsively started flows,
-; the MachNumber strategy can fail (numerical instability). to avoid this, use MachNumber
-; only after the initial pressure wave has been transported through the domain.
-; the default is zero (DANGEROUS!), a good value would be Lx/c_0 (where c_0 is used only
-; in the beginning)
-; t<t0 : fixed c0
-; t0<=t<=t1: smooth transition
-; t1<=t: MachNumber
-t0_MachNumber=;
-t1_MachNumber=;
 ; viscosity. We also respect the time step constraint imposed by explicit diffusion
 nu=1e-2;
 ; damping term for pressure, see [Ohwada, Asinari, JCP2010]
