--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -48,9 +48,12 @@ block_dist=sfc_hilbert;
 ; Therefore, you can call loadbalancing only every couple of time steps. This parameter
 ; should affect only the computational cost and not the result.
 loadbalancing_frequ=1;
-; coarsening indicator to be used in mesh adaptation
+; coarsening indicator to be used in mesh adaptation [threshold-state-vector,random,threshold-vorticity]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; threshold-vorticity: evaluates wavelet criterion on vorticity
+;random
+;randomly coarse some blocks. used for testing. note we tag for coarsening
+;only once in the first iteration
 coarsening_indicator=threshold-state-vector;
 ; use normalization for eps or not? normalization is done with INFTY norm currently. default
 ; is no normalization (0). ATTENTION works only for ACM currently (TODO!)
@@ -222,10 +225,41 @@ dissipation=1;
 ; + simple_geometry: [triangle | cylinder | rhombus]
 ; + funnel
 ; + shock_tube: [sod_shock_tube| standing_shock | moving_shock]
-; + no: [pressure_blob | shear_layer]
+; + pipe_flow
+; + no: [pressure_blob | shear_layer | pressure_wave ]
 case=funnel;
 
+[Boundary_Conditions]
+; NSTOKES 2D only: if you want to use boundary conditions, you
+; can specify them here
+; Remarks:
+; 1. for non periodic BC you have to explicitly switch of
+; the synchrinzation in the chosen direction
+; 2. CURRENTLY: non periodic BC make use of the Sparse BLAS
+; vector matrix multiplication, therefore you have to make sure
+; that SBLAS is used during compile time
+;-------------------------------------------------------------
+; availabel BCs: in coordinate direction e_i
+;   + symmetric-open -- symmetric BC in -e_i and open BC in +e_i
+;   + symmetryAxis-wall -- adiabatic slip wall in -e_i and
+;                           adiabatic non-slip wall in +e_i
+;   + periodic
+;----------------------
+; choose BC on the corresponding boundary [x,y]
+boundary_type=symmetric-open periodic;
+; you may choose reference values of the
+; statevector for the open boundaries:
+state_xminus=1.645 0 0 1e-7;
+state_xplus=1.645 0 0 1e-7;
 
+[Pipe_flow]
+; this is the validation test case for the cylindrical NS rhs
+; P_in is the pressure set at the inlet of a tube.
+; P_out is the pressure set at the outlet of the tube.
+; Use the symmetryAxis-wall boundary condition in y direction,
+; to get a velocity profile predicted by the Hagen-Poiseuille law.
+p_in=10;
+p_out=0.4;
 
 [Initial_Values]
 inicond=pressure_blob;
@@ -260,8 +294,6 @@ initial_density=1.645;      rho_0
 order_discretization=FD_4th_central_optimized;
 ; order of refinement predictor [ multiresolution_4th | multiresolution_2nd ]
 order_predictor=multiresolution_4th;
-; boundary condition [ periodic ]
-boundary_cond=periodic;
 ; filtering of equations. NOTE: the filters are PHYSICS MODULE SPECIFIC! Hence it depends on the module
 ; which values you can set here.
 ; cNS: [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | bogey_shock | wavelet_filter]
