minor: postprocessing --vor-abs // mini-cleanup

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -1,11 +1,10 @@
-;#########################################################################################
-;#########################################################################################
-;######################## WABBIT PARAMETER FILE TEMPLATE #################################
-;#########################################################################################
+;------------------------------------------------------------
+;------------ WABBIT PARAMETER FILE TEMPLATE ----------------
+;------------------------------------------------------------
 ; if you add new parameters, add them here.
 ; note values have to be declared "value=0;", with equal sign (=) and semicolon (;)
-;#########################################################################################
-;#########################################################################################
+
+
 [Domain]
 ; 2D or 3D problem?
 dim=2;
