--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -63,6 +63,11 @@ eps_normalized=1;
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
 ; many as number_equations
 threshold_state_vector_component=1 1 0;
+; it can be useful to also use the mask function (if penalization is used) for grid adaptation.
+; i.e. the grid is always at the finest level on mask interfaces. Careful though: the Penalization
+; is implemented on physics-module level, i.e. it is not available for all modules.  If it is
+; not available, the option is useless but can cause errors.
+threshold_mask=0;
 ; if this flag is set (1), then blocks on max level have to coarsen, even if their
 ; details are significant. This is equivalent to ensuring dealiasing. Hence, if set to 1,
 ; wabbit will evaluate the right hand side of your equation on max_treelevel, but in the mesh
