--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -262,6 +262,9 @@ Pr=0.71;
 mu0=1e-2;
 ; dissipation, 1=on, ...=off
 dissipation=1;
+; the navier stokes module provides different scenarios (/cases), with special initial conditions
+; penalization, boundary conditions, etc. Not all cases have the same specifications, therefore we
+; have to distinguish between them.
 ; case studies of the NStokes module:
 ; + simple_geometry: [triangle | cylinder | rhombus]
 ; + funnel
