--- a/TESTING/conv/blob_3D_adaptive/blob3d.ini
+++ b/TESTING/conv/blob_3D_adaptive/blob3d.ini
@@ -267,11 +267,16 @@ bridgeFluidMaster=1;
 particleCommand=./pig;
 
 [Timing]
-; 1 ... debuging for time measurements and testcases is active,
-debug=1;
-; unit tests
-test_time_stepper=0;
-test_spatial=0;
-test_wavelet_comp=0;
-test_ghost_nodes_synch=0;
+; If set to 1, the code will issue a single XXXXXtimes.dat file per proc, where one
+; can examine individual mpiranks manually. this file is written in every iteration.
+; the IO cost on some machines can be substantial if many cores are used: better disable
+; this functionality then. default is 0.
+write_individual_timings=0;
+
+[Debug]
+; check if the ghost node synchronization gives the right order, on a random
+; grid. this test costs some CPU time but no memory. It is done only once at startup.
+test_ghost_nodes_synch=1;
 test_treecode=0;
+; internal testing routine for the ghost nodes: allocates HUGE amounts of memory
+check_redundant_nodes=0;
