wabbit-post --POD for Multiresolution Grids added

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -32,6 +32,8 @@ eps=1e-3;1e-4;
 ; treelevel bounds
 max_treelevel=6;
 min_treelevel=1;
+; maximal number of trees in the forest:
+max_forest_size=22
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
