--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -349,12 +349,16 @@ order_predictor=multiresolution_4th;
 ; filtering of equations. NOTE: the filters are PHYSICS MODULE SPECIFIC! Hence it depends on the module
 ; which values you can set here.
 ; cNS: [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | bogey_shock | wavelet_filter]
-; ACM: [no_filter | wavelet_filter ]
+; ACM: [no_filter | wavelet_filter | explicit_7pt]
 ; ConvDiff: not implemented
 filter_type=;
 ; filter frequency (note: set filter to no_filter if you want to disable filtering completely)
 ; Note our clumsy nomenclature: we mean filtering every "filter_freq" time steps
 filter_freq=10;
+; usually, a filter would be applied to all blocks, but it is also sometimes useful to apply it just for 
+; the finest blocks (those that cannot be refined anymore). If maxlevel dealiasing is FALSE and this option is TRUE, 
+; the result is equivalent to maxlevel_dealiasing TRUE, if the filter is wavelet and it is applied in every time step
+filter_only_maxlevel=no;
 ; bogey shock detector threshold
 r_th=1e-5;
 ; if threshold is reached bogey-filter will be switch on [tanh,abs]
@@ -362,7 +366,7 @@ switch=tanh;
 ; bogey-filter detection method
 detector_method=divU
 ; write out sigma for every n filter iterations (if 0 then sigma is not written out)
-save_filter_strength=1
+save_filter_strength=1;
 
 
 [VPM]
