creating mask using pruned trees is working now. minors:	ghost node synching on arbitrary number	of components // remove	loadbalancing frequency	(always	balance) several	changes	in tree+forest management // add a bunch of new indicators

--- a/TESTING/acm/bumblebee_adaptive/insect.ini
+++ b/TESTING/acm/bumblebee_adaptive/insect.ini
@@ -174,6 +174,13 @@ filter_type=no_filter;
 ; RHS, if the RHS does not support it.
 ; flag for penalization (0/1)
 penalization=1;
+; WABBIT needs to know about the mask function (if penalization is used): does it contain
+; a time-dependent-part (e.g. moving obstacles, time-dependent forcing)? does it contain
+; a time-independent part (fixed walls, homogeneous forcing)? or both? WABBIT needs to know
+; that since we try to create the time-independent mask function only once, but the time-dependent
+; part of course in every time step.
+mask_time_dependent_part=1;
+mask_time_independent_part=1;
 ; smooth mask for penalization term [0,1]. If the obstacle moves, this flag should
 ; be set, and in static cases as well. hard masks with only 0 and 1 are deprecated but
 ; included for completeness.
