--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -48,10 +48,6 @@ inicond_refinements=0;
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=sfc_hilbert;
-; it can be expensive to balance the load and cheaper to live with a slight imbalance.
-; Therefore, you can call loadbalancing only every couple of time steps. This parameter
-; should affect only the computational cost and not the result.
-loadbalancing_frequ=1;
 ; coarsening indicator to be used in mesh adaptation [threshold-state-vector,random,threshold-vorticity]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; threshold-vorticity: evaluates wavelet criterion on vorticity
@@ -68,7 +64,7 @@ eps_normalized=1;
 threshold_state_vector_component=1 1 0;
 ; it can be useful to also use the mask function (if penalization is used) for grid adaptation.
 ; i.e. the grid is always at the finest level on mask interfaces. Careful though: the Penalization
-; is implemented on physics-module level, i.e. it is not available for all modules.  
+; is implemented on physics-module level, i.e. it is not available for all modules.
 threshold_mask=0;
 ; if this flag is set (1), then blocks on max level have to coarsen, even if their
 ; details are significant. This is equivalent to ensuring dealiasing. Hence, if set to 1,
@@ -374,6 +370,13 @@ save_filter_strength=1;
 ; RHS, if the RHS does not support it.
 ; flag for penalization (0/1)
 penalization=1;
+; WABBIT needs to know about the mask function (if penalization is used): does it contain
+; a time-dependent-part (e.g. moving obstacles, time-dependent forcing)? does it contain
+; a time-independent part (fixed walls, homogeneous forcing)? or both? WABBIT needs to know
+; that since we try to create the time-independent mask function only once, but the time-dependent
+; part of course in every time step.
+mask_time_dependent_part=1;
+mask_time_independent_part=1;
 ; smooth mask for penalization term [0,1]. If the obstacle moves, this flag should
 ; be set, and in static cases as well. hard masks with only 0 and 1 are deprecated but
 ; included for completeness. Note some mask functions may ignore this flag (the insects for example)
