add biorthogonal wavelets WARNING: this feature is experimental

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -7,12 +7,12 @@
 
 [Domain]
 ; 2D or 3D problem?
-dim=2;
+dim=3;
 ; box size of computational domain. [Lx Ly Lz]
-domain_size=1 1;
+domain_size=4 4 4;
 ; synchronization (on/off)on [x y z] domain boundaries
 ; (off (NON-PERIODIC): 0/false/yes | on (PERIODIC): 1/true/no)
-periodic_BC=1 1;
+periodic_BC=1 1 1;
 
 
 [Blocks]
@@ -24,13 +24,13 @@ number_block_nodes=17 17 17;
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-; ACM: 3 (2D), 4 (3D)
+; ACM: 3 (2D), 4 (3D) +  nscalars
 ; Convection: 1 (2D /3D)
-number_equations=4;
+number_equations=5;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
 ; treelevel bounds
-max_treelevel=6;
+max_treelevel=3;
 min_treelevel=1;
 ; maximal number of trees in the forest:
 max_forest_size=22
@@ -61,24 +61,34 @@ eps_normalized=1;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
 ; many as number_equations
-threshold_state_vector_component=1 1 0;
+threshold_state_vector_component=1 1 1 1;
 ; it can be useful to also use the mask function (if penalization is used) for grid adaptation.
 ; i.e. the grid is always at the finest level on mask interfaces. Careful though: the Penalization
 ; is implemented on physics-module level, i.e. it is not available for all modules.
-threshold_mask=0;
+threshold_mask=1;
 ; if this flag is set (1), then blocks on max level have to coarsen, even if their
 ; details are significant. This is equivalent to ensuring dealiasing. Hence, if set to 1,
 ; wabbit will evaluate the right hand side of your equation on max_treelevel, but in the mesh
 ; coarsening it will, regardless of the solution, downsample the result to max_treelevel-1. Your
 ; expected precision is thus max_treelevel-1, but the computational cost (derivatives and timestep)
 ; is on max_treelevel.
-force_maxlevel_dealiasing=0;
+force_maxlevel_dealiasing=1;
 ; if desired, we perform more than one time step
 ; before adapting the grid again. this can further reduce the overhead of adaptivity
 ; Note: the non-linear terms can create finer scales than resolved on the grid. they
 ; are usually filtered by the coarsening/refinement round trip. So if you do more than one time step
 ; on the grid, consider using a filter. default is "1", which is the classical scheme
 N_dt_per_grid=1;
+
+
+[Wavelet]
+; if we use harten-multiresolution, the coarsening operator is just taking every second
+; grid point. This is nice and local but the resulting wavelet has no vannishing moments.
+; If biorthogonal is used, a smoothing low-pass filter is applied prior to downsampling.
+; The biorthogonal option does however use harten for the ghost nodes at this time (09/2019)
+transform_type=harten-multiresolution; biorthogonal;
+; only used if transform_type=biorthogonal
+wavelet=CDF4,4;
 
 
 [Time]
@@ -108,7 +118,7 @@ write_method=fixed_time;
 write_freq=2;
 ; if write_method=fixed_time:
 ; write time for output
-write_time=100.05;
+write_time=0.01;
 ; fixed time step. if the value is greater 0.0, then the time step is fixed no matter what.
 ; the setting from the physics modules, which usually decide about dt, are ignored and over-
 ; written. The default is 0.0, so not used. NOTE: WABBIT still will adjust dt to precisely match
@@ -147,7 +157,7 @@ krylov_err_threshold=1.0e-3;
 [Physics]
 ; what physics module is used?
 ; [ACM-new, ConvDiff-new, navier_stokes]
-physics_type=navier_stokes;
+physics_type=ACM-new;
 ; decide if you want to start from a given configuration (i.e. Statevector)
 ; 1:true, 0:false and we start from the initial conditions dictated by the physics
 ; modue.
@@ -165,7 +175,7 @@ input_files=rho_000000000141.h5 Ux_000000000141.h5 Uy_000000000141.h5 p_00000000
 ; how many fields are you going to save?
 N_fields_saved=6;
 ; how are the fields labeled?
-field_names=rho Ux Uy p vort mask;
+field_names=ux uy uz p mask scalar1;
 
 
 [Statistics]
@@ -198,7 +208,9 @@ inicond=meanflow;
 p_mean_zero=no;
 ; if inicond= pressure-blob
 beta=0.05;
-
+; we can use passive scalars with the ACM. their parameters are specified in "ConvectionDiffusion" below
+; but they need to be turned on here. Default is off.
+use_passive_scalar=0;
 
 [Sponge]
 ; sponge term, used in ACM module to mimick outflow conditions for pressure waves
@@ -218,132 +230,36 @@ C_sponge=1.0e-2;
 
 
 [ConvectionDiffusion]
-; how many scalar fields do you want to solve? should be the same as number_equations
-; above.
-N_scalars=1;
+; adding passive scalars to the flow. (tracers / odors)
+; how many scalar fields do you want to solve? Each scalar requires solving an equation and
+; this the number_equations = N_fluid + N_scalars, N_fluid = 3 (2d) or 4 (3d)
+N_scalars=2;
 ; note you need to specify one value per scalar field for ALL the below parameters
-; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled.
+; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled. NOTE: if coupled to ACM,
+; provide Schmidt number instead of nu
 nu=0.0e-6;
+; if ConvectionDiffusion is run together with ACM, you specify the Schmidt number below
+; and NOT the viscosity nu
+Sc=1.0 1.0;
 ; initial condition for the scalar(s)
-inicond=blob;
-blob_width=0.01;
-; position of blob
-x0=0.5;
-y0=0.75;
-z0=0;
-; velocity field for transportation, [swirl,constant]
-velocity=swirl;
-; if the velocity profile is the swirl test, one sometimes would want to compute
-; an incomplete swirl, i.e. Tmax and Tswirl to not agree. Set T_swirl here if you want
-; the default is the same as the simulation duration
-T_swirl=5.0;
-; if constant velocity, these are the values (one per scalar)
-u0x=1.0;
-u0y=1.0;
-u0z=0.0;
-; boundary condition:
-; Note: only used in case of non periodic BC
-boundary_type=constant-inflow;
-; constant-inflow: specifiy the N_scalars of the
-; boundary values at the inflow
-phi_boundary=0.0;
-
-
-
-[Navier_Stokes]
-; choose your coordinate_system
-;  + default cartesian 2D/3D = "cartesian"
-;  + cylindrical 2D = "cylindrical"
-Coordinate_system=cartesian;
-; adiabatic coefficient
-gamma_=1.4;
-; specific gas constant
-Rs=287.05         ;for air
-; prandtl number
-Pr=0.71;
-; dynamic viscosity
-mu0=1e-2;
-; dissipation, 1=on, ...=off
-dissipation=1;
-; the navier stokes module provides different scenarios (/cases), with special initial conditions
-; penalization, boundary conditions, etc. Not all cases have the same specifications, therefore we
-; have to distinguish between them.
-; case studies of the NStokes module:
-; + simple_geometry: [triangle | cylinder | rhombus]
-; + funnel
-; + shock_tube: [sod_shock_tube| standing_shock | moving_shock]
-; + pipe_flow
-; + no: [pressure_blob | shear_layer | pressure_wave ]
-case=funnel;
-
-[Boundary_Conditions]
-; NSTOKES 2D only: if you want to use boundary conditions, you
-; can specify them here
-; Remarks:
-; 1. for non periodic BC you have to explicitly switch of
-; the synchrinzation in the chosen direction
-; 2. CURRENTLY: non periodic BC make use of the Sparse BLAS
-; vector matrix multiplication, therefore you have to make sure
-; that SBLAS is used during compile time
-;-------------------------------------------------------------
-; availabel BCs: in coordinate direction e_i
-;   + symmetric-open -- symmetric BC in -e_i and open BC in +e_i
-;   + symmetryAxis-wall -- adiabatic slip wall in -e_i and
-;                           adiabatic non-slip wall in +e_i
-;   + periodic
-;----------------------
-; choose BC on the corresponding boundary [x,y]
-boundary_type=symmetric-open periodic;
-; you may choose reference values of the
-; statevector for the open boundaries:
-state_xminus=1.645 0 0 1e-7;
-state_xplus=1.645 0 0 1e-7;
-
-[Pipe_flow]
-; this is the validation test case for the cylindrical NS rhs
-; P_in is the pressure set at the inlet of a tube.
-; P_out is the pressure set at the outlet of the tube.
-; Use the symmetryAxis-wall boundary condition in y direction,
-; to get a velocity profile predicted by the Hagen-Poiseuille law.
-p_in=10;
-p_out=0.4;
-
-[Initial_Values]
-inicond=pressure_blob;
-; initial conditions for the different szenarios:
-; 1.)mask:
-;	  inside penalized volume: velocity u=0,
-;                            pressure p=rho_0 Rs T_0,
-;   outside: velocity u=u_0 and pressure p=p_0;
-; 2.)zeros:
-;    sets initial velocitys to 0 regardles of initial_velocity
-; 3.)pressure_blob
-; 	 pressure blob with diameter inicond_width
-; 4.)sod_shock_tube
-; 	 sets initial conditions according to [Sod,1978]
-; 5.)shear_layer
-; 	 set initial conditions (rho_0,u_0,p_0) and the shear layer width from inifile;
-; 6.)simple-shock
-;    produces standing shock (1D) in x direction, specify inicond_(pressure,velocity,density,width);
-;    inicond_width quantifies the shock location in x direction
-; 7.)moving-shock
-;    produces moving shock (1D) in x direction with initial_velocity(1) specifies shock speed
-;    specify inicond_(pressure,velocity,density,inicond_width)
-;    inicond_width is the location of the shock
-inicond_width=0.01;
-initial_pressure=101330.0;  p_0
-initial_velocity=50.0 0.0 0; u_0
-initial_temperature=200;     T_0
-initial_density=1.645;      rho_0
-
-[Wavelet]
-; if we use harten-multiresolution, the coarsening operator is just taking every second
-; grid point. This is nice and local but the resulting wavelet has no vannishing moments.
-; If biorthogonal is used, a smoothing low-pass filter is applied prior to downsampling.
-; The biorthogonal option does however use harten for the ghost nodes at this time (09/2019)
-transform_type=harten-multiresolution; biorthogonal;
-; only used if transform_type=biorthogonal
-wavelet=CDF4,4;
+inicond=empty empty;
+; source for scalars. "gaussian": at the point specified below, a source term.
+; "mask_color_emission": scalar is emmited at mask parts with the color specified in widthsource
+; (which in this case is no longer the width)
+; each entry has N_scalars values.
+source=gaussian gaussian;
+x0source=1 2;
+y0source=1 1;
+z0source=0 0;
+; width of "gaussian" or color of "mask_color_emission"
+widthsource=0.2 0.1;
+; the penalization for the scalar is independent of that of the fluid for the neumann
+; no-flux BC on the obstacles. For Dirichlet sources, the usual [VPM]::C_eta is used.
+C_eta=1e-3 1.e-3;
+; sponges are used to impose dirichlet BC at domain borders: for the passive scalar,
+; you have to choice to activate this or not. If set, scalars are absorbed in the sponge
+; layer
+absorbing_sponge=1;
 
 
 [Discretization]
@@ -364,14 +280,6 @@ filter_freq=10;
 ; the finest blocks (those that cannot be refined anymore). If maxlevel dealiasing is FALSE and this option is TRUE,
 ; the result is equivalent to maxlevel_dealiasing TRUE, if the filter is wavelet and it is applied in every time step
 filter_only_maxlevel=no;
-; bogey shock detector threshold
-r_th=1e-5;
-; if threshold is reached bogey-filter will be switch on [tanh,abs]
-switch=tanh;
-; bogey-filter detection method
-detector_method=divU
-; write out sigma for every n filter iterations (if 0 then sigma is not written out)
-save_filter_strength=1;
 
 
 [VPM]
@@ -401,25 +309,8 @@ C_eta=1e-3;
 geometry=triangle;
 ; center coordinate of object
 x_cntr=0.5 0.5 0;
-; [triangle,rhombus]: angle between symmetry axis and triangle side (in degrees please)
-angle=30;
 ; [triangle,rhombus,cylinder]: length or diameter of the object
 length=0.3
-
-
-[BRIDGE]
-; type 1 if a bridge shell be created and 0 if not
-connect_with_bridge=0;
-; The following parameters are only needed if there is a bridge
-
-; Usage of a common MPI_comm_world  (1,yes,true,T=true / 0,no,false,F=false)
-bridgeCommonMPI=0;
-; If bridgeFluidMaster is true WABBIT is seen as the master and will
-; spawn (split off) the processes of the other MPI_WORLD
-;  (1,yes,true,T=true / 0,no,false,F=false)
-bridgeFluidMaster=1;
-; Command to use to launch the particle program (name of the executable)
-particleCommand=./pig;
 
 
 [Insects]
@@ -475,87 +366,6 @@ FlappingMotion_left=suzuki;
 ; if flappingmotion=="from_file", which file to use?
 infile=bumblebee_new_kinematics.ini;
 ;-------------------------------------------------------------------------------
-
-
-[funnel]
-; NOTE: Those parameters are used only in Nstokes and only if [Navier_Stokes]::case=Funnel
-;-------------------------------------------------------------------------------
-outer_diameter=0.05;
-maximal_inner_diameter=0.03;
-minimal_inner_diameter=0.0025;
-Number_of_plates=41;
-Temperatur_of_plates=50;
-jet_diameter=0.001;
-inlet_velocity=400 0;
-inlet_density=0.545;
-inlet_pressure=33000;
-outlet_pressure=1000.0;
-pump_speed=200;
-
-plates_thickness=0.0011;
-first_plate_thickness=0.003;
-distance_between_plates=0.0025;
-diameter_slope_per_plate=0.002;
-
-
-[simple_geometry]
-; NOTE: Those parameters are used only in Nstokes and only if [Navier_Stokes]::case=simple_geometry
-; + for implementation of the geometry we use the volume penalization method
-; (see: https://doi.org/10.1016/j.compfluid.2008.07.003, Boiron 2008)
-;     - Ceta is read from [VPM]::Ceta
-;     - make sure [VPM]::penalization=1;
-;     - for the in and out-flow we use sponges which mimic dirichlet BC
-;       all Spong parameter are read form [Sponge]
-;-------------------------------------------------------------------------------
-; what geometry is it?
-geometry=triangle; [ cylinder | rhombus | triangle ]
-; center coordinate of object
-x_cntr=0.5 0.5 0;
-; [triangle,rhombus]: angle between symmetry axis and triangle side (in degrees please)
-angle=30;
-; [triangle,rhombus,cylinder]: length or diameter of the object
-length=0.3;
-; + initial condition:
-; availabel intial conditions are [mask | moving-shock | pressure-blob | zeros]
-; the initial values are taken form [initial_values]
-; + note: inicond mask sets u=u0 and rho=rho0 and p=p0 for the sponge reference values
-; -------------------------------------------------------------------------------
-; FREE OUTLET for shock geometries
-; if free_outlet_wall is true a free outlet sponge will be added to
-; the domain boundary perpendicular to the
-; the inlet flow direction (x-direction)
-free_outlet_wall=1;
-
-
-[Shock_Tube]
-; This section is only available for NStokes! It is used to validate
-; the RHS euler equations and test the filter methods
-; ------------------------------------------------------------------
-; available shock configurations: [sod_shock_tube | moving-shock | standing-shock]
-name=sod_shock_tube;
-; + sod_shock_tube: see Publication Gary A Sod.,1987
-; + moving-shock:   - is a shock front which moves with speed Mach_shock
-;                   - the statevector left and right of the shock is computed
-;                     from the Rankine-Hugoniot conditions
-;                     (see F.Toro "Riemann solvers and numerical methods for fluid dynamics
-;                     p. 98ff)
-; + standing-shock: - is a standing shock wave
-;-------------------------------------------------------------------
-; for moving and standing shocks,
-; you have to provide the values for the left side of the shock:
-; the values of the right side are then computed from Rankine-Hugoniot conditions
-pressure_left=101330.0;
-velocity_left=50.0;
-temperature_left=200;
-density_left=1.645;
-; and the speed of the shock wave for the moving shock
-shock_wave_speed=500;
-; normal vector of the shock front:
-; the normal vectors are parallel to the Standard basis vectors
-; choose 1 for the normal vector e_1 (x-direction)
-;        2 for ...               e_2 (y-direction) etc.
-shock_front_normal=2;
-
 
 [Debug]
 ; check if the ghost node synchronization gives the right order, on a random
