ACM: work on passive scalars // Bugfix in biorthogonal mode (wrong array size)

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -198,6 +198,13 @@ inicond=meanflow;
 p_mean_zero=no;
 ; if inicond= pressure-blob
 beta=0.05;
+; we can use passive scalars with the ACM. their parameters are specified in "ConvectionDiffusion" below
+; but they need to be turned on here. Default is off.
+use_passive_scalar=0;
+; sometimes, but very rarely, we want to compute just the passive scalar and not
+; the flow field, because the convection-diffusion physics module does not contain the
+; penalized passive scalar eqns.
+compute_flow=1;
 
 
 [Sponge]
