--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -211,6 +211,10 @@ beta=0.05;
 ; we can use passive scalars with the ACM. their parameters are specified in "ConvectionDiffusion" below
 ; but they need to be turned on here. Default is off.
 use_passive_scalar=0;
+; sometimes, but very rarely, we want to compute just the passive scalar and not
+; the flow field, because the convection-diffusion physics module does not contain the
+; penalized passive scalar eqns.
+compute_flow=1;
 
 [Sponge]
 ; sponge term, used in ACM module to mimick outflow conditions for pressure waves
@@ -310,7 +314,7 @@ geometry=triangle;
 ; center coordinate of object
 x_cntr=0.5 0.5 0;
 ; [triangle,rhombus,cylinder]: length or diameter of the object
-length=0.3
+length=0.3;
 
 
 [Insects]
