RungeKuttaChebychev // new buffered *.t files writer // fixes in passive scalar for ACM

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -33,7 +33,7 @@ eps=1e-3;1e-4;
 max_treelevel=6;
 min_treelevel=1;
 ; maximal number of trees in the forest:
-max_forest_size=22
+max_forest_size=22;
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
@@ -99,6 +99,10 @@ CFL=1.0;
 ; has to be < 1.0 (otherwise the code is unstable). For krylov schemes, it can be greater
 ; 1, but be careful about the error. This parameter is used by ACM physics module only.
 CFL_eta=0.99;
+; time step restriction of viscous terms ( dt < CFL_NU * dx**2 / nu )
+; runge kutta 4 has constraints: 2D=>0.14 3D=>0.094 (exact expression: 2.79/(dim*pi**2)), these are
+; the default values
+CFL_nu=;
 ; wabbit can save the heavy data (flow fiels) to HDF5. What is saved depends on the physics modules
 ; and the section [Saving]. Here you control WHEN you want to save the output: either after a fixed
 ; number of time steps [fixed_freq], or after a physical time interval [fixed_time]
@@ -122,8 +126,11 @@ dt_max=0.0;
 ; time-step method. can be either "RungeKuttaGeneric" or "Krylov". In the former case,
 ; any explicit Runge-Kutta scheme can be set by using the Butcher-Tableau. (RK4 is default) In the latter,
 ; the number of Krylov subspaces M_krylov can be set.
-; [ RungeKuttaGeneric, Krylov ]
+; [ RungeKuttaGeneric, Krylov, RungeKuttaChebychev ]
 time_step_method=RungeKuttaGeneric;
+; number of stages "s" for the RungeKuttaChebychev method. Memory is always 6 registers
+; independent of stages.
+s=10;
 ; if time_step_method is krylov, then you can specify the dimension of the krylov subspace
 ; below. If dynamic subspace dimensions are used, we interpret this number as the maximum
 ; number of spaces admissible (the method requires a lot of memory in general)
