threshold quantity can now be defined in physics modules

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -51,12 +51,13 @@ block_dist=sfc_hilbert;
 ; coarsening indicator to be used in mesh adaptation [threshold-state-vector,random,threshold-vorticity]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; threshold-vorticity: evaluates wavelet criterion on vorticity
+; primary-variables: only available for NStokes: converts statevector to (rho,u,v,w,p) before thresholding
 ;random
 ;randomly coarse some blocks. used for testing. note we tag for coarsening
 ;only once in the first iteration
 coarsening_indicator=threshold-state-vector;
 ; use normalization for eps or not? normalization is done with INFTY norm currently. default
-; is no normalization (0). ATTENTION works only for ACM currently (TODO!)
+; is no normalization (0). 
 eps_normalized=1;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
