--- a/TESTING/navier_stokes/filter/bogey_shock/2D/bogey_shock.ini
+++ b/TESTING/navier_stokes/filter/bogey_shock/2D/bogey_shock.ini
@@ -28,7 +28,7 @@ adapt_mesh=1;
 adapt_inicond=1;
 ; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
-inicond_refinements=0;
+inicond_refinements=1;
 ; block distribution for balancing (also used for start distribution)
 ; [equal | sfc_z | sfc_hilbert]
 ; equal -> simple uniformly distribution
@@ -38,9 +38,20 @@ block_dist=sfc_hilbert;
 ; non uniform mesh correction: if 1 then wabbit synchronize redundant nodes
 ; at coarse blocks with data from fine blocks [ 1 | ... ]
 non_uniform_mesh_correction=1;
+; coarsening indicator to be used in mesh adaptation [threshold-state-vector,random,threshold-vorticity]
+; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
+; threshold-vorticity: evaluates wavelet criterion on vorticity
+; primary-variables: only available for NStokes: converts statevector to (rho,u,v,w,p) before thresholding
+;random
+;randomly coarse some blocks. used for testing. note we tag for coarsening
+;only once in the first iteration
+coarsening_indicator=primary-variables;
+; use normalization for eps or not? normalization is done with INFTY norm currently. default
+; is no normalization (0). 
+eps_normalized=1;
 
-
-
+threshold_state_vector_component=0 1 1 0;
+threshold_mask=1;
 
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
@@ -223,7 +234,7 @@ write_individual_timings=0;
 [Debug]
 ; check if the ghost node synchronization gives the right order, on a random
 ; grid. this test costs some CPU time but no memory. It is done only once at startup.
-test_ghost_nodes_synch=1;
+test_ghost_nodes_synch=0;
 test_treecode=0;
 ; internal testing routine for the ghost nodes: allocates HUGE amounts of memory
 check_redundant_nodes=0;
